<resources>
    <string name="app_name">FootPrint</string>
    <string name="Loginemail">Email</string>
    <string name="Loginpassword">Password</string>
    <string name="footprintmap">FootPrintMap</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="goToregister">Register</string>
    <string name="footprint_map">Footprint Map</string>
    <string name="register">Register</string>
    <string name="registername">Name</string>
    <string name="registeremail">Email</string>
    <string name="registerphone_number">Phone Number</string>
    <string name="registerpassword">Password</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="setting">Setting</string>
    <string name="navigation_drawer_close">Close nav drawer</string>
    <string name="navigation_drawer_opne">Open nav drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello ADD fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="city_name">City Name</string>
    <string name="hint_email">Email</string>
    <string name="button_login">LOGIN</string>
</resources>